update 18042024 add_task fix alignment of the input images

--- a/assets/src/add_task/add_task.css
+++ b/assets/src/add_task/add_task.css
@@ -175,3 +175,6 @@ textarea {
   margin-top: 0;
   gap: 8px;
 }
+.visibility_icon_container {
+  transform: translate(0, -65%);
+}
